--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ header{
   top: 70px;
   position: relative;
   margin-bottom: 220px;
-  background-image: url("background.png");
+  background-image: url('background.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: -145px;
