--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1,h2, .skills-list{
 }
 img{
   max-width: 100%;
+  transition: all 1s;
 }
 nav{
   background-color: #DBEBF4;
@@ -56,7 +57,7 @@ header{
   top: 70px;
   position: relative;
   margin-bottom: 220px;
-  background-image: url('../img/background.png');
+  background-image: url('background.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: -145px;
@@ -128,4 +129,7 @@ footer h2{
 }
 .right-alignment{
   text-align: right;
+}
+img:hover{
+  transform: translate(50px);
 }
