--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,27 @@ body{
   padding: 0;
   font-size: 15px:
 }
+h1 {
+  animation-duration: 1.5s;
+  animation-name: slidein;
+}
+@keyframes slidein {
+  from {
+    margin-bottpm: 100%;
+    width: 300%;
+  }
+
+  75% {
+    font-size: 30%;
+    margin-top: 25%;
+    width: 150%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
 h1,h2, .skills-list{
   font-family: 'Inknut Antiqua', serif;
 }
